--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,19 @@ export(psqi_compute_comp4)
 export(psqi_compute_comp5)
 export(psqi_compute_comp7)
 export(psqi_compute_global)
+export(tas_compute)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,enquo)
 importFrom(dplyr,if_else)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,transmute)
+importFrom(dplyr,vars)
 importFrom(lubridate,hms)
 importFrom(lubridate,hours)
 importFrom(lubridate,period_to_seconds)
+importFrom(readr,cols)
