Little fix to psqi comp 4 to make it work on tsd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(ehi_compute)
 export(ehi_compute_le)
 export(ehi_factorise_le)
 export(ehi_factorise_nominal)
+export(gds_compute)
+export(gds_compute_sum)
+export(gds_factorise)
 export(psqi_compute)
 export(psqi_compute_comp2)
 export(psqi_compute_comp3)
