fixed documentation and bugs in ipaq code. added pkgdown site

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,11 @@ LazyData: true
 Imports: 
     dplyr,
     lubridate,
-    readr
+    readr,
+    stringr
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
