--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(ehi_factorise_nominal)
 export(gds_compute)
 export(gds_compute_sum)
 export(gds_factorise)
+export(ipaq_compute_met)
+export(ipaq_time_alter)
 export(psqi_compute)
 export(psqi_compute_comp2)
 export(psqi_compute_comp3)
@@ -19,10 +21,13 @@ export(psqi_compute_comp7)
 export(psqi_compute_global)
 export(tas_compute)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,contains)
 importFrom(dplyr,enquo)
+importFrom(dplyr,funs)
 importFrom(dplyr,if_else)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
