added docs to buildignore

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: Questionnaires
-Title: What the Package Does (One Line, Title Case)
+Title: Package with functions to calculate components and sums for LCBC questionnaires
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Athanasia Monika",
