--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,17 +24,22 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,contains)
 importFrom(dplyr,enquo)
 importFrom(dplyr,funs)
+importFrom(dplyr,group_by_at)
 importFrom(dplyr,if_else)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise_at)
 importFrom(dplyr,transmute)
 importFrom(dplyr,vars)
 importFrom(lubridate,hms)
 importFrom(lubridate,hours)
 importFrom(lubridate,period_to_seconds)
 importFrom(readr,cols)
+importFrom(tidyr,gather)
