--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ Suggests:
     rmarkdown
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
+URL: https://github.com/LCBC-UiO/Questionnaires
+BugReports: https://github.com/LCBC-UiO/Questionnaires/issues
