added education functions and documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ Imports:
     tidyr,
     lubridate,
     readr,
-    stringr
+    stringr,
+    lfactors
 Suggests: 
-    testthat,
+    testthat (>= 2.1.0),
     knitr,
     rmarkdown
 RoxygenNote: 6.1.1
