--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,13 @@
 export(bdi_compute)
 export(bdi_compute_sum)
 export(bdi_factorise)
+export(edu10_factorize)
+export(edu10_reduce)
+export(edu10_to_years)
+export(edu4_factorize)
+export(edu4_to_years)
+export(edu_compiled)
+export(education_compute)
 export(ehi_compute)
 export(ehi_compute_le)
 export(ehi_factorise_le)
@@ -26,6 +33,7 @@ importFrom(dplyr,enquo)
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,if_else)
+importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
@@ -35,11 +43,14 @@ importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise_at)
 importFrom(dplyr,transmute)
 importFrom(dplyr,vars)
+importFrom(lfactors,lfactor)
 importFrom(lubridate,hms)
 importFrom(lubridate,hours)
 importFrom(lubridate,period_to_seconds)
 importFrom(readr,cols)
+importFrom(stringr,str_count)
 importFrom(tidyr,gather)
