--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,8 @@
 pandoc: 2.3.1
 pkgdown: 1.3.0
 pkgdown_sha: ~
-articles: []
+articles:
+  Education: Education.html
+  ipaq: ipaq.html
+  psqi: psqi.html
 
