--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     lubridate,
     readr,
     stringr,
-    lfactors
+    lfactors,
+    data.table
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
