--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(psqi_compute_comp5)
 export(psqi_compute_comp7)
 export(psqi_compute_global)
 export(tas_compute)
+importFrom(data.table,':=')
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,contains)
 importFrom(dplyr,enquo)
