all code covered

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(edu10_reduce)
 export(edu10_to_years)
 export(edu4_factorize)
 export(edu4_to_years)
-export(edu_compiled)
+export(edu_compile)
 export(education_compute)
 export(ehi_compute)
 export(ehi_compute_le)
