--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,25 @@
 export(bdi_compute)
 export(bdi_compute_sum)
 export(bdi_factorise)
-export(edu10_factorize)
-export(edu10_reduce)
-export(edu10_to_years)
-export(edu4_factorize)
+export(bdi_restructure)
+export(edu4_factorise)
+export(edu4_levels)
+export(edu4_levels2name)
 export(edu4_to_years)
+export(edu9_factorise)
+export(edu9_levels)
+export(edu9_levels2name)
+export(edu9_reduce)
+export(edu9_to_years)
 export(edu_compile)
-export(education_compute)
+export(edu_compute)
+export(edu_factorise)
+export(edu_levels)
+export(edu_levels2name)
+export(edu_map_chr)
+export(edu_map_num)
+export(edu_reduce)
+export(edu_to_years)
 export(ehi_compute)
 export(ehi_compute_le)
 export(ehi_factorise_le)
@@ -17,7 +29,10 @@ export(ehi_factorise_nominal)
 export(gds_compute)
 export(gds_compute_sum)
 export(gds_factorise)
+export(gds_values)
 export(ipaq_compute_met)
+export(ipaq_compute_sum)
+export(ipaq_mets)
 export(ipaq_time_alter)
 export(psqi_compute)
 export(psqi_compute_comp2)
@@ -28,9 +43,12 @@ export(psqi_compute_comp7)
 export(psqi_compute_global)
 export(tas_compute)
 importFrom(data.table,':=')
+importFrom(dplyr,'%>%')
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(dplyr,enquo)
+importFrom(dplyr,filter)
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,if_else)
@@ -45,13 +63,18 @@ importFrom(dplyr,pull)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_at)
 importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
-importFrom(lfactors,lfactor)
 importFrom(lubridate,hms)
 importFrom(lubridate,hours)
 importFrom(lubridate,period_to_seconds)
 importFrom(readr,cols)
-importFrom(stringr,str_count)
+importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(tidyr,gather)
+importFrom(tidyr,separate)
+importFrom(tidyr,spread)
+importFrom(tidyr,unite)
