ehi fixing and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,9 @@ export(edu_map_num)
 export(edu_reduce)
 export(edu_to_years)
 export(ehi_compute)
-export(ehi_compute_le)
-export(ehi_factorise_le)
+export(ehi_compute_lq)
+export(ehi_factorise_lq)
+export(ehi_factorise_lqa)
 export(ehi_factorise_nominal)
 export(gds_compute)
 export(gds_compute_sum)
