fixing travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache: packages
 before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = "TRAVIS_DEPLOY_KEY_COM")'
+  script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
 after_success:
   - Rscript -e 'covr::codecov()'
