fix error in GDS, that made data into 1 when they choudl not

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(ehi_compute_lq)
 export(ehi_factorise_lq)
 export(ehi_factorise_lqa)
 export(ehi_factorise_nominal)
+export(gds_binary)
 export(gds_compute)
 export(gds_compute_sum)
 export(gds_factorise)
@@ -35,6 +36,8 @@ export(ipaq_compute_met)
 export(ipaq_compute_sum)
 export(ipaq_mets)
 export(ipaq_time_alter)
+export(is_hm)
+export(is_hms)
 export(psqi_compute)
 export(psqi_compute_comp2)
 export(psqi_compute_comp3)
@@ -43,6 +46,10 @@ export(psqi_compute_comp5)
 export(psqi_compute_comp7)
 export(psqi_compute_global)
 export(tas_compute)
+export(time_alter)
+export(time_deci2period)
+export(time_factor)
+export(time_hms2deciH)
 importFrom(data.table,':=')
 importFrom(dplyr,'%>%')
 importFrom(dplyr,bind_cols)
