small fixed in edu, start income

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(gds_compute)
 export(gds_compute_sum)
 export(gds_factorise)
 export(gds_values)
+export(income_bin2nok)
+export(income_nok2other)
 export(ipaq_compute_met)
 export(ipaq_compute_sum)
 export(ipaq_mets)
