added neo-pi-r documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(edu_levels)
 export(edu_levels2name)
 export(edu_map_chr)
 export(edu_map_num)
+export(edu_recode)
 export(edu_reduce)
 export(edu_to_years)
 export(ehi_compute)
