--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Questionnaires
 Title: Package with functions to calculate components and sums for LCBC questionnaires
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: person("Athanasia Mo", "Mowinckel", 
         email = "a.m.mowinckel@psykologi.uio.no", 
         role = c("aut", "cre"),
@@ -8,15 +8,11 @@ Authors@R: person("Athanasia Mo", "Mowinckel",
 Description: Creates summaries and factorials of answers to questionnaires.
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
 Imports: 
-    dplyr,
+    dplyr (>= 1.0.0),
     tidyr,
     lubridate,
-    readr,
-    stringr,
-    lfactors,
-    data.table
+    lfactors
 Suggests: 
     testthat (>= 2.1.0),
     here,
@@ -25,7 +21,7 @@ Suggests:
     kableExtra,
     rmarkdown,
     covr
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 URL: https://github.com/LCBC-UiO/Questionnaires
 BugReports: https://github.com/LCBC-UiO/Questionnaires/issues
