--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(edu_compute)
 export(edu_factorise)
 export(edu_levels)
 export(edu_levels2name)
+export(edu_map)
 export(edu_map_chr)
 export(edu_map_num)
 export(edu_recode)
@@ -35,6 +36,7 @@ export(gds_factorise)
 export(gds_values)
 export(income_bin2nok)
 export(income_nok2other)
+export(ipaq_compute)
 export(ipaq_compute_met)
 export(ipaq_compute_sum)
 export(ipaq_mets)
@@ -52,37 +54,41 @@ export(tas_compute)
 export(time_alter)
 export(time_deci2period)
 export(time_factor)
-export(time_hms2deciH)
-importFrom(data.table,':=')
+export(time_hms2deci)
+export(time_of_day)
 importFrom(dplyr,'%>%')
+importFrom(dplyr,across)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,c_across)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
-importFrom(dplyr,enquo)
+importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
-importFrom(dplyr,funs)
+importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_all)
-importFrom(dplyr,mutate_at)
-importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
-importFrom(dplyr,row_number)
+importFrom(dplyr,rename_all)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
-importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
-importFrom(dplyr,summarise_at)
+importFrom(dplyr,tibble)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
-importFrom(dplyr,vars)
+importFrom(lfactors,lfactor)
+importFrom(lubridate,hm)
 importFrom(lubridate,hms)
+importFrom(lubridate,hour)
 importFrom(lubridate,hours)
+importFrom(lubridate,minute)
 importFrom(lubridate,period_to_seconds)
-importFrom(readr,cols)
+importFrom(lubridate,second)
+importFrom(lubridate,seconds_to_period)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(tidyr,gather)
