--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(psqi_compute_comp4)
 export(psqi_compute_comp5)
 export(psqi_compute_comp7)
 export(psqi_compute_global)
+export(psqi_compute_time_in_bed)
 export(tas_compute)
 export(time_alter)
 export(time_deci2period)
