--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,30 @@ export(bdi_compute)
 export(bdi_compute_sum)
 export(bdi_factorise)
 export(bdi_restructure)
+export(bfi_compute)
+export(bfi_compute_domains)
+export(bfi_compute_facets)
+export(bfi_domain_agreeable)
+export(bfi_domain_conscient)
+export(bfi_domain_extravers)
+export(bfi_domain_negemotion)
+export(bfi_domain_openminded)
+export(bfi_facet_aestheticsens)
+export(bfi_facet_anxiety)
+export(bfi_facet_assertive)
+export(bfi_facet_compassion)
+export(bfi_facet_depression)
+export(bfi_facet_emovolatility)
+export(bfi_facet_energy)
+export(bfi_facet_imagination)
+export(bfi_facet_intcuriosity)
+export(bfi_facet_organization)
+export(bfi_facet_productive)
+export(bfi_facet_respectful)
+export(bfi_facet_responsibility)
+export(bfi_facet_sociability)
+export(bfi_facet_trust)
+export(bfi_reversal)
 export(edu4_factorise)
 export(edu4_levels)
 export(edu4_levels2name)
