--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,7 +81,8 @@ export(time_deci2period)
 export(time_factor)
 export(time_hms2deci)
 export(time_of_day)
-importFrom(dplyr,'%>%')
+export(zygo_calc)
+export(zygo_recode)
 importFrom(dplyr,across)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,c_across)
