--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,7 +82,9 @@ export(time_factor)
 export(time_hms2deci)
 export(time_of_day)
 export(zygo_calc)
+export(zygo_compute)
 export(zygo_recode)
+importFrom(dplyr,`%>%`)
 importFrom(dplyr,across)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,c_across)
@@ -100,6 +102,8 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename_all)
+importFrom(dplyr,row_number)
+importFrom(dplyr,rows_patch)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
