--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,8 @@ export(time_of_day)
 export(zygo_calc)
 export(zygo_compute)
 export(zygo_recode)
+export(zygo_type)
+export(zygo_weighted)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,across)
 importFrom(dplyr,bind_cols)
@@ -103,9 +105,9 @@ importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,row_number)
-importFrom(dplyr,rows_patch)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(dplyr,transmute)
